--- a/WpfCritic/WpfCritic/WpfCritic.csproj
+++ b/WpfCritic/WpfCritic/WpfCritic.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -82,6 +83,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="View\EditGameUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\EditMovieUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -100,9 +105,13 @@
     <Compile Include="Model\Review.cs" />
     <Compile Include="Model\TVSeries.cs" />
     <Compile Include="Model\User.cs" />
+    <Compile Include="ViewModel\AllGamesWindowVM.cs" />
+    <Compile Include="ViewModel\Data\GameVM.cs" />
+    <Compile Include="ViewModel\EditGameUserControlVM.cs" />
     <Compile Include="ViewModel\EditMovieUserControlVM.cs" />
     <Compile Include="ViewModel\AddMovieWindowVM.cs" />
     <Compile Include="ViewModel\AllMoviesWindowVM.cs" />
+    <Compile Include="ViewModel\ICollectionsEntity.cs" />
     <Compile Include="ViewModel\MenuWindowVM.cs" />
     <Compile Include="ViewModel\MovieDetailsWindowVM.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
@@ -115,6 +124,9 @@
     </Compile>
     <Compile Include="View\AllGamesWindow.xaml.cs">
       <DependentUpon>AllGamesWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\EditGameUserControl.xaml.cs">
+      <DependentUpon>EditGameUserControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\EditMovieUserControl.xaml.cs">
       <DependentUpon>EditMovieUserControl.xaml</DependentUpon>
@@ -193,9 +205,7 @@
     <Content Include="Assets\django.mp4" />
     <Resource Include="Assets\button_play.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ViewModel\Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
