--- a/WpfCritic/WpfCritic/WpfCritic.csproj
+++ b/WpfCritic/WpfCritic/WpfCritic.csproj
@@ -99,6 +99,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="Core\Logger.cs" />
     <Compile Include="Model\Album.cs" />
     <Compile Include="Model\BaseStuff.cs" />
     <Compile Include="Model\BaseType.cs" />
