--- a/WpfCritic/WpfCritic/App.config
+++ b/WpfCritic/WpfCritic/App.config
@@ -2,5 +2,8 @@
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+		<connectionStrings>
+			<add name="MaxCritic" connectionString="Data Source=MAX\SQLEXPRESS;Initial Catalog=maxcritic;Integrated Security=True" providerName="System.Data.SqlClient" />
+		</connectionStrings>
     </startup>
 </configuration>
