--- a/WpfCritic/WpfCritic/App.config
+++ b/WpfCritic/WpfCritic/App.config
@@ -2,8 +2,8 @@
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-		<connectionStrings>
-			<add name="MaxCritic" connectionString="Data Source=MAX\SQLEXPRESS;Initial Catalog=maxcritic;Integrated Security=True" providerName="System.Data.SqlClient" />
-		</connectionStrings>
     </startup>
+    <connectionStrings>
+		  <add name="MaxCritic" providerName="System.Data.SqlClient" connectionString="Data Source=MAX\SQLEXPRESS;Initial Catalog=maxcritic;Integrated Security=True;" />
+		</connectionStrings>
 </configuration>
