--- a/WpfCritic/WpfCritic/WpfCritic.csproj
+++ b/WpfCritic/WpfCritic/WpfCritic.csproj
@@ -89,11 +89,13 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Compile Include="Core\Logger.cs" />
+    <Compile Include="DataLayer\Award.cs" />
     <Compile Include="DataLayer\ConnectionNameAttribute.cs" />
     <Compile Include="DataLayer\Entity.cs" />
     <Compile Include="DataLayer\Entertainment.cs" />
     <Compile Include="DataLayer\IdColumnNameAttribute.cs" />
     <Compile Include="DataLayer\NameColumnNameAttribute.cs" />
+    <Compile Include="DataLayer\Performer.cs" />
     <Compile Include="DataLayer\TableNameAttribute.cs" />
     <Compile Include="ViewModel\AddGameWindowVM.cs" />
     <Compile Include="ViewModel\AllGamesWindowVM.cs" />
