--- a/WpfCritic/WpfCritic/WpfCritic.csproj
+++ b/WpfCritic/WpfCritic/WpfCritic.csproj
@@ -76,7 +76,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="View\AddGameWindow.xaml">
+    <Page Include="View\EditOrAddEntertainmentWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -108,7 +108,7 @@
     <Compile Include="DataLayer\SongInEntertainment.cs" />
     <Compile Include="DataLayer\TableNameAttribute.cs" />
     <Compile Include="DataLayer\UserCritic.cs" />
-    <Compile Include="ViewModel\AddGameWindowVM.cs" />
+    <Compile Include="ViewModel\EditOrAddEntertainmentWindowVM.cs" />
     <Compile Include="ViewModel\EntertainmentUserControlVM.cs" />
     <Compile Include="ViewModel\Data\EntertainmentVM.cs" />
     <Compile Include="ViewModel\EditGameUserControlVM.cs" />
@@ -116,8 +116,8 @@
     <Compile Include="ViewModel\ICollectionsEntity.cs" />
     <Compile Include="ViewModel\MainMenuWindowVM.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
-    <Compile Include="View\AddGameWindow.xaml.cs">
-      <DependentUpon>AddGameWindow.xaml</DependentUpon>
+    <Compile Include="View\EditOrAddEntertainmentWindow.xaml.cs">
+      <DependentUpon>EditOrAddEntertainmentWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
