--- a/WpfCritic/WpfCritic/WpfCritic.csproj
+++ b/WpfCritic/WpfCritic/WpfCritic.csproj
@@ -100,6 +100,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModel\Data\SongVM.cs" />
+    <Compile Include="View\SongUserControl.xaml.cs">
+      <DependentUpon>SongUserControl.xaml</DependentUpon>
+    </Compile>
     <Page Include="View\EditOrAddEntertainmentWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -149,6 +153,10 @@
       <DependentUpon>MainMenuWindow.xaml</DependentUpon>
     </Compile>
     <Page Include="View\EntertainmentDetailsWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\SongUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
