--- a/WpfCritic/WpfCritic/WpfCritic.csproj
+++ b/WpfCritic/WpfCritic/WpfCritic.csproj
@@ -100,9 +100,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModel\Data\SongInEntertainmentVM.cs" />
     <Compile Include="ViewModel\Data\SongVM.cs" />
+    <Compile Include="ViewModel\EditOrAddSongInEntertainmentWindowVM.cs" />
     <Compile Include="ViewModel\EditOrAddSongWindowVM.cs" />
     <Compile Include="ViewModel\SongUserControlVM.cs" />
+    <Compile Include="View\EditOrAddSongInEntertainmentWindow.xaml.cs">
+      <DependentUpon>EditOrAddSongInEntertainmentWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\EditOrAddSongWindow.xaml.cs">
       <DependentUpon>EditOrAddSongWindow.xaml</DependentUpon>
     </Compile>
@@ -110,6 +115,10 @@
       <DependentUpon>SongUserControl.xaml</DependentUpon>
     </Compile>
     <Page Include="View\EditOrAddEntertainmentWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\EditOrAddSongInEntertainmentWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
