--- a/WpfCritic/WpfCritic/WpfCritic.csproj
+++ b/WpfCritic/WpfCritic/WpfCritic.csproj
@@ -52,6 +52,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>MC.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
@@ -105,6 +108,7 @@
     <Compile Include="ViewModel\Data\SongVM.cs" />
     <Compile Include="ViewModel\EditOrAddSongInEntertainmentWindowVM.cs" />
     <Compile Include="ViewModel\EditOrAddSongWindowVM.cs" />
+    <Compile Include="ViewModel\GenreUserControlVM.cs" />
     <Compile Include="ViewModel\SongUserControlVM.cs" />
     <Compile Include="View\EditOrAddSongInEntertainmentWindow.xaml.cs">
       <DependentUpon>EditOrAddSongInEntertainmentWindow.xaml</DependentUpon>
@@ -230,7 +234,12 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Untitled-1.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="MC.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
