--- a/WpfCritic/WpfCritic/packages.config
+++ b/WpfCritic/WpfCritic/packages.config
@@ -3,4 +3,5 @@
   <package id="Extended.Wpf.Toolkit" version="2.6" targetFramework="net452" />
   <package id="StyleCop.MSBuild" version="4.7.49.1" targetFramework="net452" developmentDependency="true" />
   <package id="StyleCopPlus.MSBuild" version="4.7.49.5" targetFramework="net452" developmentDependency="true" />
+  <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net452" />
 </packages>
