--- a/WpfCritic/WpfCritic/WpfCritic.csproj
+++ b/WpfCritic/WpfCritic/WpfCritic.csproj
@@ -122,6 +122,7 @@
     <Compile Include="ViewModel\Data\SongVM.cs" />
     <Compile Include="ViewModel\EditOrAddGenreInEntertainmentWindowVM.cs" />
     <Compile Include="ViewModel\EditOrAddGenreWindowVM.cs" />
+    <Compile Include="ViewModel\EditOrAddPerformerWindowVM.cs" />
     <Compile Include="ViewModel\EditOrAddSongInEntertainmentWindowVM.cs" />
     <Compile Include="ViewModel\EditOrAddSongWindowVM.cs" />
     <Compile Include="ViewModel\GenreUserControlVM.cs" />
@@ -133,6 +134,9 @@
     </Compile>
     <Compile Include="View\EditOrAddGenreWindow.xaml.cs">
       <DependentUpon>EditOrAddGenreWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\EditOrAddPerformerWindow.xaml.cs">
+      <DependentUpon>EditOrAddPerformerWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\EditOrAddSongInEntertainmentWindow.xaml.cs">
       <DependentUpon>EditOrAddSongInEntertainmentWindow.xaml</DependentUpon>
@@ -161,6 +165,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\EditOrAddGenreWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\EditOrAddPerformerWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
