--- a/WpfCritic/WpfCritic/App.config
+++ b/WpfCritic/WpfCritic/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
     <connectionStrings>
-		  <add name="MaxCritic" providerName="System.Data.SqlClient" connectionString="Data Source=MAX\SQLEXPRESS;Initial Catalog=maxcritic;Integrated Security=True;" />
+		  <add name="MaxCritic" providerName="System.Data.SqlClient" connectionString="Data Source=MAX\SQLEXPRESS;Initial Catalog=maxcritic;Integrated Security=false;" />
 		</connectionStrings>
 </configuration>
